# MyLetterBox

./: CMakeLists.txt  README.md
.github/workflows/: ci.yml
data/: movies.csv  series.csv
includeh/: Data.h  Model.h  User.h
src/: Data.cpp  Data.h  Model.cpp  Model.h  User.cpp  User.h  main.cpp
tests/: tests.cpp
